Fix footer overlapping on scores list template

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -31,6 +31,10 @@ footer a i {
   width: 35rem;
 }
 
+#score-table {
+  margin-bottom: 5rem;
+}
+
 /* GAMES STYLES */
 #solution,
 #number-pad,
